alignment corrected

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,13 +2,6 @@ body{
     margin: 0px;
 }
 
-.main{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border: 5px solid black;
-}
-
 input {
     border-top-style: hidden;
     border-right-style: hidden;
@@ -17,29 +10,28 @@ input {
     background-color: #eee;
 }
 
-li{
-    display: flex;
-    background-color: rgb(90, 90, 190);
-    margin-bottom: 4px;
-    padding: 4px;
-    width: 400px;
-    height: 30px;
-    font-size:24px;
-    color: cornsilk;
+.main{
+    margin-top: 50px;
+    width: 700px;
 }
 
-
-#li_name{
-    margin-top: 0px;
-}
-
-#li_phone{
-    margin-top: 0px;
-    margin-left: auto;
-}
 
 #page-heading{
     text-align: center;
     margin-top: 25px;
     color: rgb(71, 70, 70);
+}
+
+.list-group-item{
+    width: 400px;
+    height: 40px;
+    padding: 8px;
+    margin-bottom: 8px;
+    font-size: 20px;
+    font-family:monospace;
+    color: whitesmoke;
+}
+
+.t-center{
+    margin-top: 6%;
 }
